# See https://setuptools.readthedocs.io/en/latest/build_meta.html

[build-system]
# Use setuptools >= 43 because it automatically includes pyproject.toml in source distribution
# Use setuptools >= 46.5 to use attr: package.__version__
# Use setuptools >= 61 for pyproject.toml support
# https://setuptools.readthedocs.io/en/latest/history.html#id284
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfusepy"
version = "0.0.1"
description = "Ctypes bindings for the high-level API in libfuse 2 and 3"
authors = [{name = "Maximilian Knespel", email = "mxmlnknp@gmail.com"}]
license = {text = "ISC"}
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
]
urls = {Homepage = "https://github.com/mxmlnkn/mfusepy"}

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
py-modules = ["mfusepy"]
license-files = ["LICENSE"]
